[gd_scene load_steps=9 format=3 uid="uid://qn17cf1na6nr"]

[ext_resource type="Script" path="res://title_menu_a.gd" id="1_8nw6v"]
[ext_resource type="Theme" uid="uid://b0asnf5kt53ml" path="res://title_menu_theme.tres" id="2_0ybjx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gyl36"]
size = Vector2(199.5, 116)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fvfq3"]
size = Vector2(522, 77)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jbi30"]
size = Vector2(1927, 79)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ofp2"]
size = Vector2(302, 1073)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w6qcc"]
size = Vector2(194, 1082.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gx0qj"]
size = Vector2(1929, 40)

[node name="title_menu_a" type="Node2D"]
script = ExtResource("1_8nw6v")

[node name="instructions" type="Node2D" parent="."]

[node name="RigidBody2D" type="RigidBody2D" parent="instructions"]
mass = 1000.0
gravity_scale = 2.66454e-15

[node name="mooGameLabel" type="Label" parent="instructions/RigidBody2D"]
offset_left = 1376.0
offset_top = 811.0
offset_right = 1901.0
offset_bottom = 951.0
theme = ExtResource("2_0ybjx")
text = "Moo Game"
horizontal_alignment = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="instructions/RigidBody2D"]
position = Vector2(161.25, 886)
shape = SubResource("RectangleShape2D_gyl36")

[node name="RigidBody2D2" type="RigidBody2D" parent="instructions"]
mass = 1000.0
gravity_scale = 2.66454e-15

[node name="Label" type="Label" parent="instructions/RigidBody2D2"]
offset_left = 60.0
offset_top = 811.0
offset_right = 259.0
offset_bottom = 951.0
theme = ExtResource("2_0ybjx")
text = "files"

[node name="CollisionShape2D" type="CollisionShape2D" parent="instructions/RigidBody2D2"]
position = Vector2(1641, 883.5)
shape = SubResource("RectangleShape2D_fvfq3")

[node name="areaTriggers" type="Node2D" parent="."]

[node name="top" type="Area2D" parent="areaTriggers"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaTriggers/top"]
position = Vector2(957, 28)
shape = SubResource("RectangleShape2D_jbi30")

[node name="left" type="Area2D" parent="areaTriggers"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaTriggers/left"]
position = Vector2(148, 535)
shape = SubResource("RectangleShape2D_7ofp2")

[node name="right" type="Area2D" parent="areaTriggers"]
position = Vector2(1918, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaTriggers/right"]
position = Vector2(-97, 540.75)
shape = SubResource("RectangleShape2D_w6qcc")

[node name="bottom" type="Area2D" parent="areaTriggers"]
position = Vector2(0, 1074)

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaTriggers/bottom"]
position = Vector2(957, 0)
shape = SubResource("RectangleShape2D_gx0qj")

[connection signal="body_entered" from="areaTriggers/top" to="." method="_on_top_body_entered"]
[connection signal="body_entered" from="areaTriggers/left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="areaTriggers/right" to="." method="_on_right_body_entered"]
[connection signal="body_entered" from="areaTriggers/bottom" to="." method="_on_bottom_body_entered"]
